--- a/UT-88/how_do_i_build.html/russian.html
+++ b/UT-88/how_do_i_build.html/russian.html
@@ -14,7 +14,7 @@ function photo(url) {
 
 <script>photo("build1.jpg");</script>
 
-<p><a target="_blank" href="doc/От_самоделок_на_логических_элементах_до_микро_ЭВМ.pdf">Эту книгу вы можете скачать тут.</a> На обложке сверху слева фотография компьютера Микроша с телевизором. Наверное, авторы предлагали использовать корпус Микроши для компьютера ЮТ-88. Левее фото калькулятора, это одна из конфигураций компьютера. Вместо телевизора и клавиатура несколько кнопок и семисегментных индикаторов. Фото снизу это платы компьютера ЮТ-88, та же конфигурация с кнопками семисегментными индикаторами.</p>
+<p><a target="_blank" href="https://raw.githubusercontent.com/alemorf/retro_computers/master/UT-88/doc/From_homemade_devices_on_logic_elements_to_microcomputers.pdf">Эту книгу вы можете скачать тут.</a> На обложке сверху слева фотография компьютера Микроша с телевизором. Наверное, авторы предлагали использовать корпус Микроши для компьютера ЮТ-88. Левее фото калькулятора, это одна из конфигураций компьютера. Вместо телевизора и клавиатура несколько кнопок и семисегментных индикаторов. Фото снизу это платы компьютера ЮТ-88, та же конфигурация с кнопками семисегментными индикаторами.</p>
 
 <p>Я буду собирать конфигурацию компьютера с телевизором и клавиатурой. В книге нет этой схемы. Книга написана так, что читатель должен собрать сначала компьютер в корпусе калькулятора, а потом доработать его до полноценного компьютера. Я хочу этот шаг пропустить, поэтому я сразу вычеркиваю из первой схемы то, что не потребуется в будущем. Не нужное я пометил серым цветом:</p>
 
@@ -433,7 +433,7 @@ jmp start
 
 <li>Исходные коды пошивки ЮТ-88 для этой версии компьютера. Они написаны на ассемблере в мненомиках Z80. Те же исходники на моём си-подобном ассемблере CMM. Вспомогательные программы написаны на С++. Компляторы SJASMPLUS и CMM в комплекте. Архиватор MEGALZ.EXE в комплекте. Для сборки нужен Linux, g++ и Wine.</p>
 
-<p><a href="doc/%D0%AE%D0%A2-88_%D0%A1%D1%85%D0%B5%D0%BC%D1%8B_%D0%BF%D1%80%D0%BE%D1%88%D0%B8%D0%B2%D0%BA%D0%B8_%D0%B2%D0%B0%D1%80%D0%B8%D0%B0%D0%BD%D1%82%D0%B0_alemorf.7z">Скачать всю информацию по этому ЮТ-88</a></p>
+<p><a href="https://github.com/alemorf/retro_computers/tree/master/UT-88/my_sources">Скачать всю информацию по этому ЮТ-88</a></p>
 
 <h2>Схема модуля процессора, пзу, динамической памяти и клавиатуры.</h2>
 
