--- a/Specialist/my_emulator.html/russian.html
+++ b/Specialist/my_emulator.html/russian.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 </head>
 <body onload="specialistEmu()" style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;-o-user-select: none;user-select: none;"> 
+<h1>Online эмулятор компьютера Специалист</h1>
 
 <style>
 #loadmenu {
