--- a/Ocean_240/my_extensions/decode_fdc/decode_fdc.html
+++ b/Ocean_240/my_extensions/decode_fdc/decode_fdc.html
@@ -38,63 +38,34 @@ f0: F F F F F F F F F F F F F F F F
 
 Инвертирование сигнала MOTSPN. Остальные биты не имеют значения.
 
+Новое ПЗУ
+
+A0 drq, A1 intr, A2 a0, A3 a1, A4 a2, A5 !rd, A6 !mon-spn, A7 fdccs
+D0 cs1, D1 ready, D2 intrq, D3 motst
 <script>
-const rom = [
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0x5, 0xF, 0x6, 0xF, 0x2, 0xF, 0x2, 0xF, 0x6, 0xF, 0x6, 0xF, 0x2, 0xF, 0x2, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xF, 0xF, 0xE, 0xF, 0xF, 0xF, 0xE, 0xF, 0xF, 0xF, 0xE, 0xF, 0xF, 0xF, 0xE, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xE, 0xF, 0xE, 0xF, 0xA, 0xF, 0xA, 0xF, 0xE, 0xF, 0xE, 0xF, 0xA, 0xF, 0xA, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF,
-    0xF, 0xF, 0xE, 0xF, 0xF, 0xF, 0xE, 0xF, 0xF, 0xF, 0xE, 0xF, 0xF, 0xF, 0xE, 0xF,
-    0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF, 0xF
-];
-
 for (let i = 0; i < 256; i++) {
-    const fdcs    = (i >> 0) & 1;
-    const a0      = (i >> 1) & 1;
-    const intr    = (i >> 2) & 1;
-    const drq     = (i >> 3) & 1;
-    const a1      = (i >> 4) & 1;
-    const a2      = (i >> 5) & 1;
-    const nrd     = (i >> 6) & 1;
+    const drq     = (i >> 0) & 1;
+    const intr    = (i >> 1) & 1;
+    const a0      = (i >> 2) & 1;
+    const a1      = (i >> 3) & 1;
+    const a2      = (i >> 4) & 1;    
+    const nrd     = (i >> 5) & 1;
     const rd      = !nrd;
-    const nmotspn = (i >> 7) & 1;
+    const nmotspn = (i >> 6) & 1;
     const motspn  = !nmotspn;
+    const fdcs    = (i >> 7) & 1;
 
-    const d = rom[i];
-
-    const cs1   = (d >> 0) & 1;
-    const ready = (d >> 1) & 1;
-    const intrq = (d >> 2) & 1;
-    const motst = (d >> 3) & 1;
-
-    // Формулы для проверки
     const ready1 = !(!fdcs && rd && !a0 && !a1 && a2 && !intr && !drq && motspn);
     const intrq1 = !(!fdcs && rd && !a1 && a2 && intr);
     const motst1 = !(!fdcs && rd && !a1 && a2 && motspn);
     const cs11   = !((!fdcs && rd && !a1 && a2 && ready1) || (!fdcs && !rd && a0 && !a1 && a2));
 
-    // Вывод ошибок
-    if ((cs11 != 0) != (cs1 != 0))
-        document.write("cs1 error ", i.toString(16), " rom ", cs1 ? 1 : 0, " calc ", cs11 ? 1 : 0, "<br>");
-    if ((ready1 != 0) != (ready != 0))
-        document.write("ready error ", i.toString(16), " rom ", ready ? 1 : 0, " calc ", ready1 ? 1 : 0, "<br>");
-    if ((intrq1 != 0) != (intrq != 0))
-        document.write("intrq error ", i.toString(16), " rom ", intrq ? 1 : 0, " calc ", intrq1 ? 1 : 0, "<br>");
-    if ((motst1 != 0) != (motst != 0))
-        document.write("motst error ", i.toString(16), " rom ", motst ? 1 : 0, " calc ", motst1 ? 1 : 0, "<br>");
-}
+    const d = (cs11 ? (1 << 0) : 0) | (ready1 ? (1 << 1) : 0) | (intrq1 ? (1 << 2) : 0) | (motst1 ? (1 << 3) : 0);
 
-document.write("FDD ROM test<br>");
+    document.write((i & 15) == 0 ? "\n" + (i == 0 ? "0" : "") + i.toString(16) + ": " : " ");
+    document.write(d.toString(16));
+//    document.write((i & 15) == 0 ? "<br>" : " ");
+}
 
 </script>
 </pre>
