--- a/Micro_80/my_software/youtube/micro80_emulator/index.html
+++ b/Micro_80/my_software/youtube/micro80_emulator/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <a href="javascript:reset()">Сброс</a>
- | <a href="javascript:loadBasic80()">Загрузить Байсик</a>
+ | <a href="javascript:loadBasic80()">Загрузить Бейсик</a>
  | <a href="javascript:loadFile()">Загрузить файл</a><br>
 <canvas width=512 height=320 id="video"></canvas>
 <script src="i8080.js"></script>
