"image-rendering: pixelated" for Micro 80 youtube example
by Komarov Alexander ignusius

--- a/Micro_80/my_software/youtube/micro80_emulator/index.html
+++ b/Micro_80/my_software/youtube/micro80_emulator/index.html
@@ -5,10 +5,7 @@
 #video {
     width: 1024px;
     height: 640px;
-    image-rendering: -webkit-optimize-contrast;
-    image-rendering: -o-crisp-edges;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges;
+    image-rendering: pixelated;
 }
 </style>
 </head>
